src/styles/home.css
/* GLOBAL */
:root{
    --main-color : #FF6060;
    --back-color : #F6F6F6;
    --soft-shadow-color: rgba(0, 0, 0, 0.05);
    --hard-shadow-color: rgba(0, 0, 0, 0.2);
}

* {box-sizing : border-box}


html {
    font-size : 62.5%;
    height: 100%;
}

body {
    font-family: 'Montserrat', sans-serif; 
    font-size: 1.8rem;
    margin : 0;
    height: 100%;
}

#root{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;
}

main{
    margin : 0 5rem auto 5rem;
}

a, p, h1, h2{
    color: var(--main-color);
    text-decoration: none;
}
/* End GLOBAL */

/* -----HEADER----- */

header{
    display: flex;
    justify-content: space-between;
    margin : 2rem 5rem;
}

header img{
    min-width: 10rem;
    width: 16rem;
}

header nav{
    display: flex;
}

header nav a{
    padding: 1rem;
    text-align: center;
    font-weight: 500;
    white-space: nowrap;
}

header nav a:hover{
    text-decoration-line: underline;
}

/* -----END HEADER----- */

/* -----BANNERS----- */
.bg-about{
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/bg-about.png');
}

.bg-home{
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/bg-img.png');
}

.bg{
    width: 100%;
    min-height: 20rem;
    border-radius: 2rem;
    padding: 0 2rem;
    
    display: flex;
    align-items: center;
    justify-content: center;

    background-repeat:no-repeat;
    background-size: cover;
    color : #fff;
    font-size: 4rem;
    text-align: center;
}

/* -----END BANNERS----- */

/* -----HOME----- */
#housing{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    row-gap: 2.5rem;
    column-gap: 2.5rem;


    background-color: var(--back-color);
    border-radius: 2.5rem;
    padding: 2.5rem;
    margin: 2rem 0;
}

.card{
    background: rgb(0,0,0);
    background: linear-gradient(0deg, rgba(0,0,0,0.6) 5%, rgba(0,212,255,0) 100%), var(--main-color); 
    border-radius: 1rem;
    margin: 5px 5px 20px 5px;
    
    width: 340px;
    min-width: 240px;
    min-height: 240px;
    cursor: pointer;
    position: relative;
}

.card:hover{
    box-shadow: 0 8px 16px 0 var(--hard-shadow-color);
    transform: scale(1.02);
}

.card-img{
    position: absolute;
    top: 0;
    left: 0;

    border-radius: 1rem;
    object-fit: cover;
    overflow: hidden;
    
    width: 100%;
    height: 100%;
}

.card-text{
    position: absolute;
    bottom: 0;
    left: 0;

    color: #FFF;
    text-shadow: 0px 0px 20px #000;
    
    padding : 0 1.5rem 1.5rem 1.5rem;
    width: auto;
    height: 20rem;
    display: flex;
    align-items: flex-end;
    overflow: hidden;
}

/* -----END HOME----- */

.std-link{
    text-decoration-line: underline;
    text-align: center;
}


#error{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.error-title{
    font-weight: 700;
    font-size: 20rem;
    color: var(--main-color);
    margin : 3rem;
}

.error-subtitle{
    font-weight: 500;
    font-size: 3rem;
    color: var(--main-color);
    text-align: center;
}

/* -----ABOUT----- */
.collapse-container{
    border-radius: 1rem;
    margin: 2rem 0;
    width: 100%;
}

.collapse-preview{
    background-color: var(--main-color);
    border-radius: 1rem;
    width: 100%;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.collapse-preview h2{
    color: #fff;
    margin: 1rem 1rem;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.collapse-preview img{
    margin: 0 2rem;
}

.collapse-hidden{
    background-color: var(--back-color);
    border-radius: 0 0 1rem 1rem;
    padding: 1rem;
    display: none;
    margin: 0;
}

.collapse-text{
    color: var(--main-color);
    padding : 1rem;
    margin: 0;
    white-space: pre-line;
    text-align: justify;
    text-justify: inter-word;
    line-height: 2.7rem;
    font-size: 2rem;
}

.collapse-container ul{
    list-style-type: none;
    margin: 0;
    padding: 2rem 1rem;
    color: var(--main-color);
    line-height: 2.7rem;
    font-size: 2rem;
}

.collapse-reveal{
    background-color: var(--back-color);
    border-radius: 0 0 1rem 1rem;
    padding: 1rem;
    margin: 0;
}

.up-arrow{
    transform: rotate(180deg);
}
/* -----END ABOUT----- */

/* -----CAROUSEL----- */

.carousel{
    position: relative;
    height: 50rem;
}

.image-slide{
    border-radius: 2.5rem;
    background-size: cover;
    background-position: center center;
    height: 100%;
}

[class*=slide-arrow]{
    position: absolute;
    top: 22.5rem;
    cursor: pointer;
    width: 5rem;
    height: 5rem;
}

[class*=slide-arrow] img {
    width: 100%;
    height: 100%;
}

.slide-arrow-left{
    left: 0;
    transform: rotate(90deg);
}

.slide-arrow-right{
    right: 0;
    transform: rotate(-90deg);
}

/* -----END CAROUSEL----- */

/* -----HOUSING INFO GRID LAYOUT----- */

#housing-info-top{
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: repeat(3, auto);

    margin: 2rem 0;
}

#housing-info-top h1{
    grid-row: 1;
    margin: 1rem 0 0 0;
}

#housing-info-top h2{
    grid-row: 2;
    margin: 1rem 0;
}

#housing-info-top .tags{
    grid-row: 3;
    margin: 0;
}

#housing-info-top .host-info{
    grid-column: 2;
    grid-row: 1 / 3;
}

#housing-info-top .rating{
    grid-column: 2;
    grid-row: 3;
}

#housing-info-bottom{
    display: grid;
    grid-template-columns: 50% 50%;
}

/* -----END HOUSING INFO GRID LAYOUT----- */

/* -----HOUSING INFO----- */

#housing-info-top h1{
    font-weight: 500;
    font-size: 3.6rem;
    line-height: 3.8rem;
}

#housing-info-top h2{
    font-weight: 500;
    font-size: 1.8rem;
}

#housing-info-bottom .equipment{
    display: flex;
    justify-content: flex-end;
    padding-left: 10%;
}

#housing-info-bottom .description{
    display: flex;
    justify-content: flex-start;
    padding-right: 10%;
}

/* -----END HOUSING INFO----- */

/* -----HOST----- */

.host{
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding: 0 0.5rem;
}

.host p{
    color: var(--main-color);
    width: min-content;
    text-align: right;
    margin : 0 1rem;
}

.host img{
    border-radius: 50%;
    width: 50px;
}

/* -----END HOST----- */

/* -----RATING----- */

.rating{
    display: flex;
    justify-content: flex-end;;
    align-items: center;
}

.rating-container{
    display: flex;
    justify-content: flex-end;
    padding: 0.5rem 0.5rem;
}

.empty-star{
    filter: brightness(0) saturate(100%) invert(95%) sepia(0%) saturate(82%) hue-rotate(150deg) brightness(96%) contrast(96%); /*https://codepen.io/sosuke/pen/Pjoqqp*/
}

/* -----END RATING----- */

/* -----TAG----- */

.tags{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.tag-container{
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: var(--main-color);
    border-radius: 10px;
    width: fit-content;
    min-width: 8rem;
    padding: 0 1.5rem;
    margin: 0.5rem 2rem 0.5rem 0;
}

.tag-text p{
    margin : 0;
    color: #fff;
    font-size: 2rem;
    padding: 0.5rem 1rem;
}

/* -----END TAG----- */

/* -----FOOTER----- */
footer{
    align-self: flex-end;
    width: 100%;
    background-color: #000;
    color : #FFF;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

footer img{
    margin: 1rem auto 1rem auto;
    filter: brightness(9999%);
    width: 15rem;
}

footer p{
    text-align: center;
    color: #fff;
}
/* -----END FOOTER----- */

@media screen and (max-width: 992px) {
    
    header{
        margin: 2rem 2rem;
    }

    main{
        margin : 0 2rem auto 2rem;
    }
    
    .error-title{
        font-size: 15rem;
    }

    #housing-info-top{
        grid-template-columns: 100%;
        grid-template-rows: repeat(4, auto);
    
        margin: 2rem 0;
    }
    
    #housing-info-top h1{
        grid-row: 1;
        margin: 0 0 1rem 0;
    }
    
    #housing-info-top h2{
        grid-row: 2;
        margin: 0 0 1rem 0;
    }
    
    #housing-info-top .tags{
        grid-row: 3;
        margin: 0;
    }
    
    #housing-info-top .host-info, #housing-info-top .rating{
        grid-column: 1;
        grid-row: 4;
    }

    .rating{
        justify-content: flex-start;
    }

    .rating-container{
        padding: 0.5rem 0;
    }
    
    #housing-info-bottom{
        grid-template-columns: 100%;
    }

    #housing-info-bottom .equipment{
        justify-content: flex-start;
        padding-left: 0;
    }
    
    #housing-info-bottom .description{
        justify-content: flex-start;
        padding-right: 0;
    }

    /* -----CAROUSEL----- */

    .carousel{
        height: 35rem;
    }

    [class*=slide-arrow]{
        top: 15.5rem;
        width: 4rem;
        height: 4rem;
    }

    /* -----END CAROUSEL----- */

    .tag-text p{
        font-size: 1.5rem;
        padding: 0.5rem 0.5rem;
    }

}

